Fixed generic solution for running w or w/o profiler
svn path=/trunk/eXist/; revision=5337