@@ -1,7 +1,27 @@
 #!/bin/bash
 #unset LANG
 
-YJP_HOME=/home/wolf/Java/yjp-5.5.2
+# $Id$
+
+# Usage with profiler:
+usage="run.sh [-a architecture-and-cpu] [-y yjp-home-path] class-to-run\n run.sh -a linux-x86-32 -y /home/ljo/bin/yjp-5.0.9 org.exist.xquery.XPathQueryTest\n"
+
+index=0
+while getopts "a:y:" option
+do 
+  case $option in
+      y ) yjp_home=${OPTARG}; echo ${yjp_home};;
+      a ) arch=${OPTARG}; echo ${arch};;
+  esac
+  index=${OPTIND}
+done
+
+if [ $index -gt 0 ]; then
+    LD_LIBRARY_PATH="$LD_LIBRARY_PATH:${yjp_home}/bin/${arch}/";
+    export LD_LIBRARY_PATH
+
+    shift $(($index - 1)) 
+fi
 
 if [ -z "$EXIST_HOME" ]; then
     EXIST_HOME_1=`dirname "$0"`
@@ -24,9 +44,15 @@ fi
 JAVA_ENDORSED_DIRS="$EXIST_HOME"/lib/endorsed
 
 PROFILER_OPTS=-agentlib:yjpagent
-LD_LIBRARY_PATH="$YJP_HOME/bin/linux-amd64/"
 
+if [ "x${yjp_home}" != "x" ]; then
 $JAVA_HOME/bin/java $JAVA_OPTS \
 	-Djava.endorsed.dirs=$JAVA_ENDORSED_DIRS \
 	-Dexist.home=$EXIST_HOME $PROFILER_OPTS \
 	-jar start.jar $*
+else
+$JAVA_HOME/bin/java $JAVA_OPTS \
+	-Djava.endorsed.dirs=$JAVA_ENDORSED_DIRS \
+	-Dexist.home=$EXIST_HOME \
+	-jar start.jar $*
+fi
